# BigEye

./: .env.example  .env_example  .gitignore  README.md  compose.yaml  playwright.config.ts  pytest.ini
.github/workflows/: ci.yml
.superpowers/sdd/: autonomous-task-7-report.md  task-2-report.md  task-4-report.md  task-5-report.md
backend/: __init__.py  requirements.txt  run.py
backend/agents/: __init__.py  context.py  fuzzing_worker.py  manager.py  repository_analysis.py  target_repair.py  workflow.py
backend/api/: __init__.py  app.py  dependencies.py
backend/database/: __init__.py  connection.py  reset.sh  schema.sql  schema_contract.sql
backend/fuzzing/: __init__.py  sanitizer_environment.py
backend/models/: __init__.py  asset.py  campaign.py  campaign_artifact.py  coverage.py  event.py  finding.py  project.py  task.py
backend/repositories/: __init__.py  asset_repository.py  campaign_artifact_repository.py  campaign_repository.py  coverage_checkpoint_repository.py  coverage_repository.py  finding_repository.py  project_repository.py  task_repository.py
backend/services/: __init__.py  check_settings.py  clone_repository.py  create_project.py  execute_project_backbone.py  initial_tasks.py  read_analysis.py  run_project_backbone.py  stream_task_output.py
backend/tests/fixtures/component_project/: CMakeLists.txt  README.md
backend/tests/fixtures/component_project/harnesses/: correct.c  incorrect.c
backend/tests/fixtures/component_project/include/: parser.h
backend/tests/fixtures/component_project/seeds/: record.input
backend/tests/fixtures/component_project/src/: parser.c
backend/tests/fixtures/system_project/: CMakeLists.txt  README.md
backend/tests/fixtures/system_project/crashes/: duplicate-one.input  duplicate-two.input
backend/tests/fixtures/system_project/seeds/: framed.txt  plain.txt
backend/tests/fixtures/system_project/src/: main.c
backend/tests/fixtures/whole_loop_project/: CMakeLists.txt
backend/tests/fixtures/whole_loop_project/include/: decoder.h
backend/tests/fixtures/whole_loop_project/seeds/: framed.input  plain.input
backend/tests/fixtures/whole_loop_project/src/: decoder.c  decoder_cli.c
docs/: release-verification.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: check.sh  run_libaom_acceptance.py  setup.sh  start.sh
(+282 files in other folders)
